Fixed iframe overflow bug for mobile Safari

--- a/src/themes/basic/_layout.styl
+++ b/src/themes/basic/_layout.styl
@@ -323,6 +323,8 @@ body.sticky
 
 .markdown-section iframe
   border 1px solid #eee
+  width 1px
+  min-width 100%
 
 .markdown-section table
   border-collapse collapse
